// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly fetching ebooks 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Loading...
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly fetching ebooks failed 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Fail
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing fail 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Purchase failed
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing initial 1`] = `
.c9 {
  height: 48px;
  padding: 0 20px;
  background: white;
  border: 1px solid #c5c5c5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 {
  position: relative;
  width: 20px;
  height: 20px;
  border: 2px solid black;
}

.c3 {
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
}

.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c4 {
  font-weight: bold;
}

.c7 {
  font-size: 12px;
}

.c5 {
  border: none;
  height: 2px;
  background: #dedede;
}

.c8 {
  height: 48px;
  border: 1px solid #c5c5c5;
  padding: 0 20px;
}

.c8::-webkit-input-placeholder {
  font-size: 12px;
}

.c8::-moz-placeholder {
  font-size: 12px;
}

.c8:-ms-input-placeholder {
  font-size: 12px;
}

.c8::placeholder {
  font-size: 12px;
}

.c10 {
  height: 48px;
  background: white;
  color: black;
  border: 2px solid transparent;
  font-weight: bold;
  cursor: pointer;
}

.c11 {
  height: 48px;
  background: white;
  color: black;
  border: 2px solid transparent;
  font-weight: bold;
  cursor: pointer;
  background: black;
  color: white;
}

.c6 {
  display: inline-block;
  width: 36px;
  height: 36px;
  text-align: center;
  line-height: 32px;
  border-radius: 100%;
  font-weight: bold;
  border: 2px solid black;
  margin-right: 10px;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <span
      class=""
    >
      Welcome to the best place for you to learn about Latin América E-commerce. Start to learn now and discovery ways options to improve your sales.
    </span>
    <div>
      <ul>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="1"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/1.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 1
              </span>
              <span
                class=""
              >
                The ebook 1
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 100,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="2"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/2.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 2
              </span>
              <span
                class=""
              >
                The ebook 2
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 200,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="3"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/3.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 3
              </span>
              <span
                class=""
              >
                The ebook 3
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 300,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="4"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/4.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 4
              </span>
              <span
                class=""
              >
                The ebook 4
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 400,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="5"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/5.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 5
              </span>
              <span
                class=""
              >
                The ebook 5
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 500,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="6"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/6.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 6
              </span>
              <span
                class=""
              >
                The ebook 6
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 600,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="7"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/7.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 7
              </span>
              <span
                class=""
              >
                The ebook 7
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 700,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="8"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/8.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 8
              </span>
              <span
                class=""
              >
                The ebook 8
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 800,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="9"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/9.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 9
              </span>
              <span
                class=""
              >
                The ebook 9
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 900,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              />
              <input
                class="c3"
                type="checkbox"
                value="10"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/10.png"
            />
            <div>
              <span
                class="c4"
              >
                Ebook 10
              </span>
              <span
                class=""
              >
                The ebook 10
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 1000,00
            </span>
          </div>
        </li>
      </ul>
      <hr
        class="c5"
      />
      <div>
        <span
          class="c0"
        >
          TOTAL
        </span>
        <span
          class="c0"
        >
          R$ 0,00
        </span>
      </div>
    </div>
    <form>
      <div
        class=""
      >
        <header>
          <span
            class="c6"
          >
            1
          </span>
          <span
            class="c4"
          >
            Personal data
          </span>
        </header>
        <div
          class=""
        >
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="1"
              >
                Name
              </label>
            </div>
            <div>
              <input
                class="c8"
                id="1"
                name="personalData.name"
                placeholder="Your name here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="2"
              >
                E-mail
              </label>
            </div>
            <div>
              <input
                class="c8"
                id="2"
                name="personalData.email"
                placeholder="Your e-mail here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="3"
              >
                CPF
              </label>
            </div>
            <div>
              <input
                class="c8"
                id="3"
                name="personalData.cpf"
                placeholder="Your CPF here"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class=""
      >
        <header>
          <span
            class="c6"
          >
            2
          </span>
          <span
            class="c4"
          >
            Billing Address
          </span>
        </header>
        <div
          class=""
        >
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="4"
              >
                Zip code
              </label>
            </div>
            <div>
              <input
                class="c8"
                id="4"
                name="billingAddress.zipCode"
                placeholder="14530000"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="5"
              >
                State
              </label>
            </div>
            <div>
              <select
                class="c9"
                id="5"
                name="billingAddress.state"
                placeholder="Your state here"
              >
                <option
                  class=""
                  value="AC"
                >
                  Acre
                </option>
                <option
                  class=""
                  value="AL"
                >
                  Alagoas
                </option>
                <option
                  class=""
                  value="AP"
                >
                  Amapá
                </option>
                <option
                  class=""
                  value="AM"
                >
                  Amazonas
                </option>
                <option
                  class=""
                  value="BA"
                >
                  Bahia
                </option>
                <option
                  class=""
                  value="CE"
                >
                  Ceará
                </option>
                <option
                  class=""
                  value="DF"
                >
                  Distrito Federal
                </option>
                <option
                  class=""
                  value="ES"
                >
                  Espírito Santo
                </option>
                <option
                  class=""
                  value="GO"
                >
                  Goiás
                </option>
                <option
                  class=""
                  value="MA"
                >
                  Maranhão
                </option>
                <option
                  class=""
                  value="MT"
                >
                  Mato Grosso
                </option>
                <option
                  class=""
                  value="MS"
                >
                  Mato Grosso do Sul
                </option>
                <option
                  class=""
                  value="MG"
                >
                  Minas Gerais
                </option>
                <option
                  class=""
                  value="PA"
                >
                  Pará
                </option>
                <option
                  class=""
                  value="PB"
                >
                  Paraíba
                </option>
                <option
                  class=""
                  value="PR"
                >
                  Paraná
                </option>
                <option
                  class=""
                  value="PE"
                >
                  Pernambuco
                </option>
                <option
                  class=""
                  value="PI"
                >
                  Piauí
                </option>
                <option
                  class=""
                  value="RJ"
                >
                  Rio de Janeiro
                </option>
                <option
                  class=""
                  value="RN"
                >
                  Rio Grande do Norte
                </option>
                <option
                  class=""
                  value="RS"
                >
                  Rio Grande do Sul
                </option>
                <option
                  class=""
                  value="RO"
                >
                  Rondônia
                </option>
                <option
                  class=""
                  value="RR"
                >
                  Roraima
                </option>
                <option
                  class=""
                  value="SC"
                >
                  Santa Catarina
                </option>
                <option
                  class=""
                  value="SP"
                >
                  São Paulo
                </option>
                <option
                  class=""
                  value="SE"
                >
                  Sergipe
                </option>
                <option
                  class=""
                  value="TO"
                >
                  Tocantins
                </option>
              </select>
            </div>
          </div>
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="6"
              >
                City
              </label>
            </div>
            <div>
              <input
                class="c8"
                id="6"
                name="billingAddress.city"
                placeholder="Your city here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <div>
              <label
                class="c7"
                for="7"
              >
                Address
              </label>
            </div>
            <div>
              <input
                class="c8"
                id="7"
                name="billingAddress.address"
                placeholder="Your full address here"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class=""
      >
        <header>
          <span
            class="c6"
          >
            3
          </span>
          <span
            class="c4"
          >
            Payment
          </span>
        </header>
        <div
          class=""
        >
          <button
            class="c10"
            data-method="boleto"
            type="button"
          >
            Boleto Bancário
          </button>
          <button
            class="c10"
            data-method="creditCard"
            type="button"
          >
            Credit Card
          </button>
          <button
            class="c11"
            disabled=""
            type="submit"
          >
            Buy now
          </button>
        </div>
      </div>
    </form>
  </div>
  <footer>
    <div>
      <span
        class="c4"
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing success 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Purchase success
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;
